--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,14 @@ dependencies:
   smooth_page_indicator: ^1.2.1
   carousel_slider: ^5.0.0
   cached_network_image: ^3.4.1
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
+  fluttertoast: ^8.2.12
+  cloud_firestore: ^5.6.6
+  firebase_storage: ^12.4.0
+  connectivity_plus: ^6.1.4
+  shared_preferences: ^2.5.3
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
